prusti/tests/pass/parse/pure.stderr
Verification of 10 items...
error: [Prusti: verification error] statement might panic
  --> $DIR/pure.rs:41:5
   |
41 |     assert!(z == 5);
   |     ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:48:9
   |
48 |         result == 3     // test that we get correct span information
   |         ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:56:1
   |
56 | / fn test_max3() -> i32 {
57 | |     let a = 4;
58 | |     let b = 3;
59 | |     max(a, b)
60 | | }
   | |_^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure.rs:69:11
   |
69 | #[ensures(result == max(a, b))]
   |           ^^^^^^^^^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure.rs:69:1
   |
69 | #[ensures(result == max(a, b))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Verification failed
error: aborting due to 3 previous errors

